clusters/homelab/kube-system/traefik-dashboard.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: traefik-dashboard-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: traefik.k3s.bartbrinkman.nl
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-dashboard
          servicePort: dashboard-http
  tls:
  - hosts:
    - traefik.k3s.bartbrinkman.nl
    secretName: traefik-k3s-bartbrinkman-nl-tls
